<?xml version="1.0"?>
<package>
  <!-- This must match the name of the package folder -->
  <name>sample_package</name>

  <version>0.0.0</version>
  <description>The sample_package package</description>
  <license>MIT</license>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="your_email@todo.todo">ltumcs</maintainer>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
